# socket.io-client-cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
examples/Console/: CMakeLists.txt
src/: sio_client.cpp  sio_client.h  sio_message.h  sio_socket.cpp  sio_socket.h
src/internal/: sio_client_impl.cpp  sio_client_impl.h  sio_packet.cpp  sio_packet.h
test/: .gitignore  CMakeLists.txt  sio_test.cpp
